applications/excalidraw/traefik.yml
# yaml-language-server: $schema=kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: default
  labels:
    app: excalidraw
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /excalidraw
        pathType: Prefix
        backend:
          service:
            name: excalidraw
            port:
              number: 8080
